# discordbot

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  TODO.md  deathroll.js  index.js  package-lock.json  package.json  player.js  setup_db.sh  solutions.txt
.github/workflows/: rust.yml
.sqlx/: query-aff350b28c0dd3c541d072b88eb57b591fdbc44d28bcdaa0cdad97f42d46bbb8.json  query-dadd02212a45ba5c8b3ad502de3d67104461e1374c847afb91aa447daf933ef7.json
commands/: coinflip.js  deathroll.js  fortune.js  gold.js  join.js  joke.js  ping.js  playing.js  trivia.js
data/: solutions.txt
migrations/: 001_user.sql
src/: main.rs
src/api/: api_app.rs  mod.rs
src/api/routes/: dm_group.rs  dm_user.rs  health_check.rs  mod.rs
src/commands/: age.rs  help.rs  info.rs  joke.rs  leaderboard.rs  mod.rs  ping.rs  slots.rs  tokens.rs  trivia.rs  types.rs  user_id.rs  weather.rs  wordle.rs
src/utils/: database.rs  mod.rs  tokens.rs  wordle.rs
