[package]
name = "discordbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.14"
serde = {version = "1", features = ["derive"]}
serenity = {version = "0.11.5",default-features = false, features = ["client", "gateway", "rustls_backend", "model","framework", "standard_framework","cache","http"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread","signal"] }
tracing = "0.1.23"
serde_json = "1.0"
tracing-subscriber = "0.2"
