[package]
name = "discordbot"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "framework",
  "cache",
  "collector",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
serde_json = "1.0"
tracing-subscriber = "0.3"
html-escape = "0.2"
rand = "0.9"
sqlx = { version = "0.8", features = [
  "sqlite",
  "runtime-tokio",
  "tls-native-tls",
] }

[dev-dependencies]
tokio-test = "*"
